--- a/AlphabetSoupCharity_Optimization.ipynb
+++ b/AlphabetSoupCharity_Optimization.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Deliverable 1: Preprocessing the Data for a Neural Network"
+    "### Deliverable 3: Preprocessing the Data for a Neural Network"
    ]
   },
   {
@@ -157,7 +157,6 @@
    ],
    "source": [
     "# Import our dependencies\n",
-    "import os\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler,OneHotEncoder\n",
     "import pandas as pd\n",
@@ -553,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +567,7 @@
        " 'SPECIAL_CONSIDERATIONS']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1074,7 +1073,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/lv/d33mn6wx6xqddjyb4kztlc9h0000gn/T/ipykernel_38756/2910392310.py:3: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only\n",
+      "/var/folders/lv/d33mn6wx6xqddjyb4kztlc9h0000gn/T/ipykernel_40815/2910392310.py:3: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only\n",
       "  X = application_df.drop(['IS_SUCCESSFUL'], 1).values\n"
      ]
     }
@@ -1109,7 +1108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Deliverable 2: Compile, Train and Evaluate the Model"
+    "### Compile, Train and Evaluate the Model"
    ]
   },
   {
@@ -1125,15 +1124,19 @@
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " dense (Dense)               (None, 80)                3520      \n",
+      " dense (Dense)               (None, 110)               4840      \n",
       "                                                                 \n",
-      " dense_1 (Dense)             (None, 30)                2430      \n",
+      " dense_1 (Dense)             (None, 80)                8880      \n",
       "                                                                 \n",
-      " dense_2 (Dense)             (None, 1)                 31        \n",
+      " dense_2 (Dense)             (None, 40)                3240      \n",
+      "                                                                 \n",
+      " dense_3 (Dense)             (None, 20)                820       \n",
+      "                                                                 \n",
+      " dense_4 (Dense)             (None, 1)                 21        \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 5,981\n",
-      "Trainable params: 5,981\n",
+      "Total params: 17,801\n",
+      "Trainable params: 17,801\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -1142,7 +1145,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-05-06 13:13:21.316090: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2022-05-06 16:11:09.919495: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -1150,22 +1153,24 @@
    "source": [
     "# Define the model - deep neural net, i.e., the number of input features and hidden nodes for each layer.\n",
     "number_input_features = len(X_train_scaled[0])\n",
-    "hidden_nodes_layer1 = 80\n",
-    "hidden_nodes_layer2 = 30\n",
     "\n",
-    "\n",
+    "# Number_input_features\n",
     "nn = tf.keras.models.Sequential()\n",
     "\n",
-    "# First hidden layer\n",
-    "nn.add(\n",
-    "    tf.keras.layers.Dense(units=hidden_nodes_layer1, input_dim=number_input_features, activation=\"relu\")\n",
-    ")\n",
+    "# Hidden layer 1\n",
+    "nn.add(tf.keras.layers.Dense(units=110, activation=\"relu\", input_dim = number_input_features))\n",
     "\n",
-    "# Second hidden layer\n",
-    "nn.add(tf.keras.layers.Dense(units=hidden_nodes_layer2, activation=\"relu\"))\n",
+    "# Hidden layer 2\n",
+    "nn.add(tf.keras.layers.Dense(units=80, activation=\"relu\"))\n",
+    "\n",
+    "# Hidden layer 3\n",
+    "nn.add(tf.keras.layers.Dense(units=40, activation=\"sigmoid\"))\n",
+    "\n",
+    "# Hidden layer 4\n",
+    "nn.add(tf.keras.layers.Dense(units=20, activation=\"sigmoid\"))\n",
     "\n",
     "# Output layer\n",
-    "nn.add(tf.keras.layers.Dense(units=1, activation=\"sigmoid\"))\n",
+    "nn.add(tf.keras.layers.Dense(units=1, activation=\"linear\"))\n",
     "\n",
     "# Check the structure of the model\n",
     "nn.summary()"
@@ -1183,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1191,15 +1196,15 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "804/804 [==============================] - 1s 844us/step - loss: 0.5733 - accuracy: 0.7205\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5967 - accuracy: 0.7103\n",
       "Epoch 2/5\n",
-      "804/804 [==============================] - 1s 827us/step - loss: 0.5545 - accuracy: 0.7314\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5611 - accuracy: 0.7295\n",
       "Epoch 3/5\n",
-      "804/804 [==============================] - 1s 822us/step - loss: 0.5514 - accuracy: 0.7313\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5544 - accuracy: 0.7323\n",
       "Epoch 4/5\n",
-      "804/804 [==============================] - 1s 841us/step - loss: 0.5506 - accuracy: 0.7320\n",
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5541 - accuracy: 0.7328\n",
       "Epoch 5/5\n",
-      "804/804 [==============================] - 1s 813us/step - loss: 0.5490 - accuracy: 0.7329\n"
+      "804/804 [==============================] - 1s 1ms/step - loss: 0.5547 - accuracy: 0.7313\n"
      ]
     }
    ],
@@ -1210,15 +1215,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "268/268 - 0s - loss: 0.5541 - accuracy: 0.7278 - 229ms/epoch - 853us/step\n",
-      "Loss: 0.5540615320205688, Accuracy: 0.7278134226799011\n"
+      "268/268 - 0s - loss: 0.5530 - accuracy: 0.7256 - 237ms/epoch - 885us/step\n",
+      "Loss: 0.55295729637146, Accuracy: 0.7255976796150208\n"
      ]
     }
    ],
@@ -1230,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
